[workspace]
resolver = "2"
members = [
    "contracts/common",
    "contracts/grant_stream",
    "contracts/vesting_contracts",
    "contracts/arbitration",
    "contracts/compliance",
    "contracts/zk_kyc"
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.dev]
panic = "abort"
